fixed alignment and font size

--- a/src/page-sections/federal-covid-spending/tracking/tracking.module.scss
+++ b/src/page-sections/federal-covid-spending/tracking/tracking.module.scss
@@ -68,10 +68,11 @@ h2 {
     font-size: 1.625rem;
     font-weight: 300;
     margin-right: 12px;
+    margin-top: 3px;
+  }
 
-    #view-spending-by-dropdown-label {
-      display: none;
-    }
+  #view-spending-by-dropdown-label {
+    display: none;
   }
 }
 
